--- a/templates/reservation.html
+++ b/templates/reservation.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <title>예약 페이지</title>
 </head>
 <body>
-$END$
+    <h1>예약 페이지</h1>
+    <a href="/reservation/time">예약하기</a>
 </body>
 </html>
