--- a/templates/reserved.html
+++ b/templates/reserved.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <title>예약 완료</title>
 </head>
 <body>
-$END$
+    <h1>예약이 완료되었습니다!</h1>
+    <a href="/reservation">돌아가기</a>
 </body>
 </html>
