--- a/templates/time_select.html
+++ b/templates/time_select.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8" />
+    <title>시간 선택</title>
 </head>
 <body>
-$END$
+<h1>시간 선택</h1>
+<form method="post" action="/reservation/submit">
+    <label>강의실: <input type="text" name="room_id" /></label><br />
+    <label>시작 시간: <input type="datetime-local" name="start_time" /></label><br />
+    <label>종료 시간: <input type="datetime-local" name="end_time" /></label><br />
+    <input type="hidden" name="token" value="{{ request.cookies.get('token') }}">
+    <button type="submit">예약하기</button>
+</form>
 </body>
 </html>
